# Vexel_gen_ai

./: .replit  app.py  main.py  pyproject.toml  requirements.txt
static/: auth_style.css  script.js
templates/: hi  index.html  login.html  signup.html
