[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
]
[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
requests = "^2.32.4"
pillow = "^11.3.0"
replicate = "^1.0.7"
google-generativeai = ">=0.8.5"
firebase-admin = "^7.1.0"
flask-cors = "^6.0.1"
replit = "^4.1.2"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.1.1"
werkzeug = "^3.1.3"
